<?xml version="1.0"?>
<package format="2">
  <name>twr_uwb_driver</name>
  <version>0.0.1</version>
  <description>Serial reader for DWM1001</description>
  <maintainer email="luca.santoro@unitn.it">pi</maintainer>
  <license>BSD</license>

  <author email="luca.santoro@unitn.it">Luca Santoro</author>
  <author email="roland.jung@aau.at">Roland Jung</author>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>uwb_msgs</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>uwb_msgs</build_export_depend>
  
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>uwb_msgs</exec_depend>
</package>
